Student was assigned a task

--- a/src/School.System.Web/Pages/Roles/Teachers/Index.cshtml
+++ b/src/School.System.Web/Pages/Roles/Teachers/Index.cshtml
@@ -7,33 +7,34 @@
 @using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Table
 @using Volo.Abp.AspNetCore.Mvc.UI.Bundling.TagHelpers
 @using Volo.Abp.AspNetCore.Mvc.UI.Layout
-@model School.System.Web.Pages.Roles.Guardians.IndexModel
+@model School.System.Web.Pages.Roles.Teachers.IndexModel
 @inject IHtmlLocalizer<SystemResource> L
 @inject IPageLayout PageLayout
 @{
-    PageLayout.Content.Title = L["Guardians"].Value;
+    PageLayout.Content.Title = L["Teachers"].Value;
     PageLayout.Content.MenuItemName = SystemMenus.Roles;
 }
 
 @section scripts
 {
-    <abp-script src="/Pages/Roles/Guardians/index.js" />
+    <abp-script src="/Pages/Roles/Teachers/index.js" />
 }
-
 @section content_toolbar {
-    <abp-button id="NewGuardianButton" text="@L["NewGuardian"].Value" icon="plus" size="Small" button-type="Primary" />
+    <abp-button id="NewTeacherButton" text="@L["NewTeacher"].Value" icon="plus" size="Small" button-type="Primary" />
 }
-
 <abp-card>
     <abp-card-body>
-        <abp-table striped-rows="true" id="GuardiansTable">
+        <abp-table striped-rows="true" id="TeachersTable">
             <thead>
             <tr>
                 <th>@L["Actions"]</th>
-                <th>@L["GuardianIdentificationNumber"]</th>
-                <th>@L["GuardianName"]</th>
-                <th>@L["GuardianSurname"]</th>
-                <th>@L["GuardianPhone"]</th>
+                <th>@L["TeacherIdentificationNumber" ]</th>
+                <th>@L["TeacherName"]</th>
+                <th>@L["TeacherSurname"]</th>
+                <th>@L["TeacherBirthday"]</th>
+                <th>@L["TeacherPhone"]</th>
+                <th>@L["Type"]</th>
+                <th>@L["Salary"]</th>
                 
             </tr>
             </thead>
