--- a/src/School.System.Web/Pages/Roles/Guardians/EditModal.cshtml
+++ b/src/School.System.Web/Pages/Roles/Guardians/EditModal.cshtml
@@ -2,20 +2,21 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using School.System.Localization
 @using Volo.Abp.AspNetCore.Mvc.UI.Bootstrap.TagHelpers.Modal
-@model School.System.Web.Pages.Roles.Guardians.CreateModalModel
+@model School.System.Web.Pages.Roles.Guardians.EditModalModel
 @inject IHtmlLocalizer<SystemResource> L
 @{
     Layout = null;
 }
-<form data-ajaxFrom="true" asp-page="/Roles/Guardians/CreateModal" autocomplete="off">
-    <abp-modal id="GuardianCreateModal">
-        <abp-modal-header title="@L["NewGuardian"].Value"></abp-modal-header>
+<form data-ajaxForm="true" asp-page="/Roles/Guardians/EditModal" autocomplete="off">
+    <abp-modal id="GuardianEditModal">
+        <abp-modal-header title="@L["Update"].Value"></abp-modal-header>
         <abp-modal-body>
-            
-            <abp-input asp-for="Guardian.GuardianIdentificationNumber"/>
+            <abp-input asp-for="Id"/>
             <abp-input asp-for="Guardian.GuardianName"/>
             <abp-input asp-for="Guardian.GuardianSurname"/>
             <abp-input asp-for="Guardian.GuardianPhone"/>
+            <abp-input asp-for="Guardian.GuardianIdentificationNumber"/>
+
         </abp-modal-body>
         <abp-modal-footer buttons="@(AbpModalButtons.Cancel|AbpModalButtons.Save)">
         </abp-modal-footer>
