--- a/src/School.System.Web/Pages/Roles/Students/Index.cshtml
+++ b/src/School.System.Web/Pages/Roles/Students/Index.cshtml
@@ -27,15 +27,15 @@
             <thead>
             <tr>
                 <th>@L["Actions"]</th>
-                <th>@L["StudentName"]</th>
-                <th>@L["StudentSurname"]</th>
-                <th>@L["StudentBirthday"]</th>
-                <th>@L["StudentPhone"]</th>
+                <th>@L["Student Name"]</th>
+                <th>@L["Student Surname"]</th>
+                <th>@L["Student Birthday"]</th>
+                <th>@L["Student Phone"]</th>
                 <th>@L["Class"]</th>
                 <th>@L["Brach"]</th>
-                <th>@L["SchoolFee" ]</th>
-                <th>@L["GuardianId" ]</th>
-                <th>@L["StudentIdentificationNumber" ]</th>
+                <th>@L["School Fee" ]</th>
+                
+                <th>@L["Student Identification Number" ]</th>
             </tr>
             </thead>
         </abp-table>
